--- a/D7AA8623C.opf/index.yml
+++ b/D7AA8623C.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   663d2da117e744469d9a1eabc4146020:
     parts: {}
+    work_id: D1696
     span:
-    - vol: 14
+    - base: dad4
       start: 1
       end: 2192
-    work_id: D1696
